--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-    <meta name="description" content="Realize o sorteio de números e nomes através do carregamento de uma planilha com todos os participantes." />
-    <title>Sorteador Planilha</title>
-</head>
-<body>
-    <form id="uploadForm" enctype="multipart/form-data">
-        <input type="file" id="excelFile" accept=".xlsx, .xls">
-        <button type="submit">Enviar Planilha</button>
-    </form>
-    <button id="sortearBtn">Sortear</button>
-    <div id="contagemRegressiva"></div>
-    <div id="vencedor"></div>
-    <div id="vencedores"></div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Realize o sorteio de números e nomes através do carregamento de uma planilha com todos os participantes." />
+        <title>Sorteador Planilha</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    </head>
+    <body>
+        <div class="container mt-5">
+            <h1>Sorteador Por Planilha</h1>
+            <p>Carregue uma planilha com a coluna de números e a coluna dos nomes dos participantes e clique em "Sortear</p>
+            <form id="uploadForm" enctype="multipart/form-data" class="mb-3">
+                <div class="form-group">
+                    <input type="file" id="excelFile" accept=".xlsx, .xls, .csv, .ods" required class="form-control-file">
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar Planilha</button>
+            </form>
+            <button id="drawBtn" class="btn btn-success">Sortear</button>
+            <div id="countDown" class="mt-3"></div>
+            <div id="winner" class="mt-3"></div>
+            <div id="winnersList" class="mt-3"></div>
+        </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="script.js"></script>
-</body>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script src="script.js"></script>
+    </body>
 </html>
