application deployed, but showing error when loading file

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
             <p>Carregue uma planilha com a coluna de números e a coluna dos nomes dos participantes e clique em "Sortear</p>
             <form id="uploadForm" enctype="multipart/form-data" class="mb-3">
                 <div class="form-group">
-                    <input type="file" id="excelFile" accept=".xlsx, .xls, .csv, .ods" required class="form-control-file">
+                    <input type="file" id="excelFile" name="excelFile" accept=".xlsx, .xls, .csv, .ods" required class="form-control-file">
                 </div>
                 <button type="submit" class="btn btn-primary">Enviar Planilha</button>
             </form>
