changing the system to connect to a database

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="container mt-5">
             <h1>Sorteador Por Planilha</h1>
-            <p>Carregue uma planilha com a coluna de números e a coluna dos nomes dos participantes e clique em "Sortear</p>
+            <p>Carregue uma planilha com a coluna de números e a coluna dos nomes dos participantes e clique em "Sortear"</p>
             <form id="uploadForm" enctype="multipart/form-data" class="mb-3">
                 <div class="form-group">
                     <input type="file" id="excelFile" name="excelFile" accept=".xlsx, .xls, .csv, .ods" required class="form-control-file">
