--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,13 @@
                 <button type="submit" class="btn btn-primary">Enviar Planilha</button>
             </form>
             <button id="drawBtn" class="btn btn-success">Sortear</button>
+            <button type="button" id="resetBtn" class="btn btn-danger" disabled>Reiniciar</button>
             <div id="countDown" class="mt-3"></div>
             <div id="winner" class="mt-3"></div>
             <div id="winnersList" class="mt-3"></div>
         </div>
 
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<!--        <script src="script.js"></script>-->
+        <script src="script.js"></script>
     </body>
 </html>
