--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,15 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Enviar Planilha</button>
             </form>
+            <div class="form-group col-md-4">
+                <label for="giftInput">Prêmio:</label>
+                <input type="text" id="giftInput" class="form-control">
+            </div>
             <button id="drawBtn" class="btn btn-success">Sortear</button>
             <button type="button" id="resetBtn" class="btn btn-danger" disabled>Reiniciar</button>
+            <div>
+                <button id="exportBtn" class="btn btn-info mt-3">Exportar Vencedores</button>
+            </div>
             <div id="countDown" class="mt-3"></div>
             <div id="winner" class="mt-3"></div>
             <div id="winnersList" class="mt-3"></div>
