--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,11 @@
                 <button id="exportBtn" class="btn btn-info mt-3">Exportar Vencedores</button>
             </div>
             <div id="countDown" class="mt-3"></div>
-            <div id="winner" class="mt-3"></div>
-            <div id="winnersList" class="mt-3"></div>
+            <div id="winner" class="mt-3"><span>Último vencedor: </span></div>
+            <div id="winnersList" class="mt-3">
+                <h3>Vencedores</h3>
+                <ul id="winners"></ul>
+            </div>
         </div>
 
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
